@@ -111,7 +111,7 @@ description and <a href="faq.html">faq.html</a> for the F.A.Q.
   See <a href="http://www.koeniglich.de/fhem/linux.html">
   	http://www.koeniglich.de/fhem/linux.html</a><br>
   For kernels older then 2.6.x apply the patch from the doc directory to your
-  kernel, recompile it kernel and reboot or load/reload the ftdi_sio module.
+  kernel, recompile it and reboot or load/reload the ftdi_sio module.
 </ul>
 
 <h3>Perl modules</h3>
@@ -140,7 +140,6 @@ description and <a href="faq.html">faq.html</a> for the F.A.Q.
       parameters.</li>
   <li>Delete the savefile if you are upgrading from an older version.</li>
   <li>Start the server with <code>fhem.pl &lt;configfile&gt;</code></li>
-  <li>For using the WS300, look into the contrib/ws300 directory.</li>
 </ul>
 
 <h3>General Notes for Webfrontends:</h3>
